End of first day. Navbar and main photo done

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 
-        <script type="text/javascript">
+<!--         <script type="text/javascript">
         var totalCount = 9;
         function ChangeIt()
         {
@@ -27,7 +27,8 @@
         document.body.background = 'photos/'+num+'.jpg';
         document.body.style.backgroundRepeat = "repeat";// Background repeat
         }
-        </script>
+        </script> -->
+
   </head>
   <body>
 
@@ -44,9 +45,25 @@
 <!-- background image -->
 
     <div class="backphoto">
-      <script type="text/javascript">
+<!--       <script type="text/javascript">
       ChangeIt();
-      </script>
+      </script> -->
+
+
+
+      <div id="video-container">
+        <div class="video-overlay"></div>
+        <div class="video-content">
+          <div class="inner">
+            <h1>DM <em>PHOTOgraphy</em></h1>
+            <div class="scroll-icon">
+              <a class="scrollTo" data-scrollTo="portfolio" href="#"><img src="img/scroll-icon.png" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <img class="backphoto" src="photos/4.jpg" alt="photos/2">
+
+      </div>
 
 
     </div>
