--- a/index.html
+++ b/index.html
@@ -1,88 +1,193 @@
 <!DOCTYPE html>
 <html>
-  <head>
-        <title>DM Photography</title>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+<head>
+  <title>DM Photography</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="css/fontAwesome.css">
+  <link rel="stylesheet" href="css/light-box.css">
+  <link rel="stylesheet" href="css/templatemo-style.css">
+  <link rel = "stylesheet" type = "text/css"href = "myStyle.css" />
+  <link href="https://fonts.googleapis.com/css?family=Kanit:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+  <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/fontAwesome.css">
-        <link rel="stylesheet" href="css/light-box.css">
-        <link rel="stylesheet" href="css/templatemo-style.css">
-        <link rel = "stylesheet" type = "text/css"href = "myStyle.css" />
+</head>
+<body>
+  <!-- Navigation bar -->
+  <nav>
+    <div class="logo">
+      <a href="index.html">DM Photo<em>graphy</em></a>
+    </div>
+  </nav>
+  <!-- background image -->
+  <div class="backphoto">
+    <div id="video-container">
+      <div class="video-overlay"></div>
+      <div class="video-content">
+        <div class="inner">
 
-        <link href="https://fonts.googleapis.com/css?family=Kanit:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-
-<!--         <script type="text/javascript">
-        var totalCount = 9;
-        function ChangeIt()
-        {
-        var num = Math.ceil( Math.random() * totalCount );
-        document.body.background = 'photos/'+num+'.jpg';
-        document.body.style.backgroundRepeat = "repeat";// Background repeat
-        }
-        </script> -->
-
-  </head>
-  <body>
-
-<!-- Navigation bar -->
-    <nav>
-        <div class="logo">
-            <a href="index.html">DM Photo<em>graphy</em></a>
-        </div>
-      <div class="menu-icon">
-        <span></span>
-      </div>
-    </nav>
-
-<!-- background image -->
-
-    <div class="backphoto">
-<!--       <script type="text/javascript">
-      ChangeIt();
-      </script> -->
-
-
-
-      <div id="video-container">
-        <div class="video-overlay"></div>
-        <div class="video-content">
-          <div class="inner">
-            <h1>DM <em>PHOTOgraphy</em></h1>
-            <div class="scroll-icon">
-              <a class="scrollTo" data-scrollTo="portfolio" href="#"><img src="img/scroll-icon.png" alt=""></a>
-            </div>
+          <div>
+            <img  id="i" src="logo/logo w.png" alt="logo.jpg">
           </div>
         </div>
-        <img class="backphoto" src="photos/4.jpg" alt="photos/2">
+      </div>
+      <img class="backphoto" src="background/1.jpg"alt="photos/2">
+    </div>
+  </div>
+  <!-- company text and information -->
+  <div class="logo">
+    <h1><em> LET ME HELP</em> you sell your apartment faster by taking great photos of your apartment that will shine in your real estate advert and get more visits</h1>
+  </div>
 
+  <!-- gallery carousel up -->
+
+  <div class="full-screen-portfolio" id="portfolio">
+    <div class="container-fluid">
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="photos/1.jpg" data-lightbox="image-1"><div class="thumb">
+            <div class="hover-effect">
+              <div class="hover-content">
+                <h1>Ana's living room in Rome</h1>
+                <p>Bright and spacious living room, ready to enjoy</p>
+              </div>
+            </div>
+            <div class="image">
+              <img src="photos/1.jpg">
+            </div>
+          </div></a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="photos/2.jpg" data-lightbox="image-1"><div class="thumb">
+            <div class="hover-effect">
+              <div class="hover-content">
+                <h1>Ana's living room in Rome</h1>
+                <p>Bright and spacious living room, ready to enjoy</p>
+              </div>
+            </div>
+            <div class="image">
+              <img src="photos/2.jpg">
+            </div>
+          </div></a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="photos/3.jpg" data-lightbox="image-1"><div class="thumb">
+            <div class="hover-effect">
+              <div class="hover-content">
+                <h1>Bright and modern kitchen in Barcelona</h1>
+                <p>Perfect to enjoy someone's company while you prepare a meal</p>
+              </div>
+            </div>
+            <div class="image">
+              <img src="photos/3.jpg">
+            </div>
+          </div></a>
+        </div>
       </div>
 
-
-    </div>
-<!-- company text and information -->
-    <div class="text">
-      <h1>The text section</h1>
-    </div>
-
-    <!-- gallery carousel -->
-    <div class="gallery">
-      <h1>The gallery section</h1>
-    </div>
-
-<!-- footer -->
-
     <footer>
-      <h1>Footer section</h1>
+        <div class="container-fluid">
+            <div class="col-md-12">
+                <p>Copyright &copy; 2018 Company Name
+
+    | Designed by TemplateMo</p>
+            </div>
+        </div>
     </footer>
 
 
-  </body>
-</html>
+      <!-- Modal button -->
+    <div class="popup-icon">
+      <button id="modBtn" class="modal-btn"><img src="img/contact-icon.png" alt=""></button>
+    </div>
+
+    <!-- Modal -->
+    <div id="modal" class="modal">
+      <!-- Modal Content -->
+      <div class="modal-content">
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h3 class="header-title">Say hello to <em>Highway</em></h3>
+          <div class="close-btn"><img src="img/close_contact.png" alt=""></div>
+        </div>
+        <!-- Modal Body -->
+        <div class="modal-body">
+          <div class="col-md-6 col-md-offset-3">
+            <form id="contact" action="" method="post">
+                <div class="row">
+                    <div class="col-md-12">
+                      <fieldset>
+                        <input name="name" type="text" class="form-control" id="name" placeholder="Your name..." required="">
+                      </fieldset>
+                    </div>
+                    <div class="col-md-12">
+                      <fieldset>
+                        <input name="email" type="email" class="form-control" id="email" placeholder="Your email..." required="">
+                      </fieldset>
+                    </div>
+                    <div class="col-md-12">
+                      <fieldset>
+                        <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..." required=""></textarea>
+                      </fieldset>
+                    </div>
+                    <div class="col-md-12">
+                      <fieldset>
+                        <button type="submit" id="form-submit" class="btn">Send Message Now</button>
+                      </fieldset>
+                    </div>
+                </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+    <section class="overlay-menu">
+      <div class="container">
+        <div class="row">
+          <div class="main-menu">
+              <ul>
+                  <li>
+                      <a href="index.html">Home - Full-width</a>
+                  </li>
+                  <li>
+                      <a href="masonry.html">Home - Masonry</a>
+                  </li>
+                  <li>
+                      <a href="grid.html">Home - Small-width</a>
+                  </li>
+                  <li>
+                      <a href="about.html">About Us</a>
+                  </li>
+                  <li>
+                      <a href="blog.html">Blog Entries</a>
+                  </li>
+                  <li>
+                      <a href="single-post.html">Single Post</a>
+                  </li>
+              </ul>
+              <p>We create awesome templates for you.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+
+    <script src="js/vendor/bootstrap.min.js"></script>
+
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>    </body>
+    </html>
