--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>DM Photography</title>
+  <link rel="icon" href="logo/logo w.png">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="">
@@ -40,7 +41,9 @@
     </div>
   </div>
   <!-- company text and information -->
-  <div class="logo">
+
+
+  <div class="text">
     <h1><em> LET ME HELP</em> you sell your apartment faster by taking great photos of your apartment that will shine in your real estate advert and get more visits</h1>
   </div>
 
@@ -94,100 +97,124 @@
         </div>
       </div>
 
-    <footer>
+      <div class="text">
+        <h1><em> LET ME HELP</em></h1> <p>you sell your apartment faster by taking great photos of your apartment that will shine in your real estate advert and get more visits</p>
+      </div>
+
+      <div class="full-screen-portfolio" id="portfolio">
         <div class="container-fluid">
-            <div class="col-md-12">
+          <div class="col-md-4 col-sm-6">
+            <div class="portfolio-item">
+              <a href="photos/1.jpg" data-lightbox="image-1"><div class="thumb">
+                <div class="hover-effect">
+                  <div class="hover-content">
+                    <h1>Ana's living room in Rome</h1>
+                    <p>Bright and spacious living room, ready to enjoy</p>
+                  </div>
+                </div>
+                <div class="image">
+                  <img src="photos/1.jpg">
+                </div>
+              </div></a>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6">
+            <div class="portfolio-item">
+              <a href="photos/2.jpg" data-lightbox="image-1"><div class="thumb">
+                <div class="hover-effect">
+                  <div class="hover-content">
+                    <h1>Ana's living room in Rome</h1>
+                    <p>Bright and spacious living room, ready to enjoy</p>
+                  </div>
+                </div>
+                <div class="image">
+                  <img src="photos/2.jpg">
+                </div>
+              </div></a>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6">
+            <div class="portfolio-item">
+              <a href="photos/3.jpg" data-lightbox="image-1"><div class="thumb">
+                <div class="hover-effect">
+                  <div class="hover-content">
+                    <h1>Bright and modern kitchen in Barcelona</h1>
+                    <p>Perfect to enjoy someone's company while you prepare a meal</p>
+                  </div>
+                </div>
+                <div class="image">
+                  <img src="photos/3.jpg">
+                </div>
+              </div></a>
+            </div>
+          </div>
+
+          <footer>
+            <div class="container-fluid">
+              <div class="col-md-12">
                 <p>Copyright &copy; 2018 Company Name
 
-    | Designed by TemplateMo</p>
+                | Designed by TemplateMo</p>
+              </div>
             </div>
-        </div>
-    </footer>
+          </footer
 
 
-      <!-- Modal button -->
-    <div class="popup-icon">
-      <button id="modBtn" class="modal-btn"><img src="img/contact-icon.png" alt=""></button>
-    </div>
+          <!-- Modal button -->
+          <div class="popup-icon">
+            <button id="modBtn" class="modal-btn"><img src="img/contact-icon.png" alt=""></button>
+          </div>
 
-    <!-- Modal -->
-    <div id="modal" class="modal">
-      <!-- Modal Content -->
-      <div class="modal-content">
-        <!-- Modal Header -->
-        <div class="modal-header">
-          <h3 class="header-title">Say hello to <em>Highway</em></h3>
-          <div class="close-btn"><img src="img/close_contact.png" alt=""></div>
-        </div>
-        <!-- Modal Body -->
-        <div class="modal-body">
-          <div class="col-md-6 col-md-offset-3">
-            <form id="contact" action="" method="post">
-                <div class="row">
-                    <div class="col-md-12">
-                      <fieldset>
-                        <input name="name" type="text" class="form-control" id="name" placeholder="Your name..." required="">
-                      </fieldset>
+          <!-- Modal -->
+          <div id="modal" class="modal">
+            <!-- Modal Content -->
+            <div class="modal-content">
+              <!-- Modal Header -->
+              <div class="modal-header">
+                <h3 class="header-title">Say hello to <em>Highway</em></h3>
+                <div class="close-btn"><img src="img/close_contact.png" alt=""></div>
+              </div>
+              <!-- Modal Body -->
+              <div class="modal-body">
+                <div class="col-md-6 col-md-offset-3">
+                  <form id="contact" action="" method="post">
+                    <div class="row">
+                      <div class="col-md-12">
+                        <fieldset>
+                          <input name="name" type="text" class="form-control" id="name" placeholder="Your name..." required="">
+                        </fieldset>
+                      </div>
+                      <div class="col-md-12">
+                        <fieldset>
+                          <input name="email" type="email" class="form-control" id="email" placeholder="Your email..." required="">
+                        </fieldset>
+                      </div>
+                      <div class="col-md-12">
+                        <fieldset>
+                          <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..." required=""></textarea>
+                        </fieldset>
+                      </div>
+                      <div class="col-md-12">
+                        <fieldset>
+                          <button type="submit" id="form-submit" class="btn">Send Message Now</button>
+                        </fieldset>
+                      </div>
                     </div>
-                    <div class="col-md-12">
-                      <fieldset>
-                        <input name="email" type="email" class="form-control" id="email" placeholder="Your email..." required="">
-                      </fieldset>
-                    </div>
-                    <div class="col-md-12">
-                      <fieldset>
-                        <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..." required=""></textarea>
-                      </fieldset>
-                    </div>
-                    <div class="col-md-12">
-                      <fieldset>
-                        <button type="submit" id="form-submit" class="btn">Send Message Now</button>
-                      </fieldset>
-                    </div>
+                  </form>
                 </div>
-            </form>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-    </div>
 
 
 
-    <section class="overlay-menu">
-      <div class="container">
-        <div class="row">
-          <div class="main-menu">
-              <ul>
-                  <li>
-                      <a href="index.html">Home - Full-width</a>
-                  </li>
-                  <li>
-                      <a href="masonry.html">Home - Masonry</a>
-                  </li>
-                  <li>
-                      <a href="grid.html">Home - Small-width</a>
-                  </li>
-                  <li>
-                      <a href="about.html">About Us</a>
-                  </li>
-                  <li>
-                      <a href="blog.html">Blog Entries</a>
-                  </li>
-                  <li>
-                      <a href="single-post.html">Single Post</a>
-                  </li>
-              </ul>
-              <p>We create awesome templates for you.</p>
-          </div>
-        </div>
-      </div>
-    </section>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
-    <script src="js/vendor/bootstrap.min.js"></script>
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+          <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>    </body>
-    </html>
+          <script src="js/vendor/bootstrap.min.js"></script>
+
+          <script src="js/plugins.js"></script>
+          <script src="js/main.js"></script>    </body>
+          </html>
