Fixed logo resize issue

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 </head>
 <body>
   <!-- Navigation bar -->
-  <nav>
+<!--   <nav>
     <div class="logo">
       <a href="index.html">DM Photo<em>graphy</em></a>
     </div>
-  </nav>
+  </nav> -->
 
   <!-- background image -->
   <div class="backphoto">
@@ -35,10 +35,7 @@
       <div class="video-overlay"></div>
       <div class="video-content">
         <div class="inner">
-
-          <div>
-            <img  id="i" src="logo/logo w.png" alt="logo.jpg">
-          </div>
+          <img class="logowhite" src="logo/logo w.png">
         </div>
       </div>
       <img class="backphoto" src="background/3.jpg"alt="photos/2">
