Cleaned up text, fonts

--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
   </div>
 
   <!-- company text and information -->
-  <div class="title"><l>L</l>et me help you...</div>
+  <div class="title">Let me help you</div>
 
-  <div class="text">
+  <div class="texttop">
     Let me help you sell or rent your apartment faster by taking great photos that will make your real estate advert shine and get more views.
 
     Using advanced photographic and editing techniques and professional equipment, I can bring out the best of your apartment, house or business.
   </div>
   <br>
 
-  <div class="subtitle">Some of the techniques I offer:
+  <div class="subtitle"> Some of the techniques I offer:
   </div>
 
 
@@ -65,7 +65,7 @@
           - Wide angle photography <br>
           - Panoramic shots <br>
           - Perspective correction <br>
-          - Remove color castsing
+          - Remove color casting
         </div>
         <div class="col-sm-12 col-md-6">
           <div class="subtext">
@@ -81,7 +81,7 @@
   </div>
 
 
-  <div class="text">Real estate photography is a great way to maximize your chances of selling or renting out your apartment or house by making your advert the star of the show. Get the most visits with professional photos that make your advert stand out from the usual crowd of boring snaps taken with a mobile phone.
+  <div class="textbottom">Real estate photography is a great way to maximize your chances of selling or renting out your apartment or house by making your advert the star of the show. Get the most visits with professional photos that make your advert stand out from the usual crowd of boring snaps taken with a mobile phone.
 
   Contact me using the e-mail form below for a quote.</div>
 </div>
@@ -231,9 +231,7 @@
         <footer>
           <div class="container-fluid">
             <div class="col-md-12">
-              <p>Copyright &copy; 2018 Company Name
-
-              | Designed by TemplateMo</p>
+              <p>Copyright &copy; 2020 DM Photograpy - Designed by David Martins</p>
             </div>
           </div>
           </footer
