fixed frontend issues

--- a/index.html
+++ b/index.html
@@ -60,25 +60,25 @@
   <br>
 
   <div class="container">
-    <div class="row">
-        <div class="col-sm-12 col-md-6 subtext">
+    <div class="subtext">
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
           - Wide angle photography <br>
           - Panoramic shots <br>
           - Perspective correction <br>
           - Remove color casting
         </div>
         <div class="col-sm-12 col-md-6">
-          <div class="subtext">
-            - Spot removal <br>
-            - HDR <br>
-            - Image sharpening <br>
-            - Multiple exposures
-          </div>
+          - Spot removal <br>
+          - HDR <br>
+          - Image sharpening <br>
+          - Multiple exposures
         </div>
-        <br>
       </div>
+      <br>
     </div>
   </div>
+</div>
 
 
   <div class="textbottom">Real estate photography is a great way to maximize your chances of selling or renting out your apartment or house by making your advert the star of the show. Get the most visits with professional photos that make your advert stand out from the usual crowd of boring snaps taken with a mobile phone.
