Removed pics folder, set up contact section

--- a/index.html
+++ b/index.html
@@ -18,17 +18,10 @@
   <link rel = "stylesheet" type = "text/css"href = "fonts.css" />
   <link href="https://fonts.googleapis.com/css?family=Kanit:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-  <style> @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-  </style>
+  <style> @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');</style>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
-  <!-- Navigation bar -->
-<!--   <nav>
-    <div class="logo">
-      <a href="index.html">DM Photo<em>graphy</em></a>
-    </div>
-  </nav> -->
-
   <!-- background image -->
   <div class="backphoto">
     <div id="video-container">
@@ -38,27 +31,19 @@
           <img class="logowhite" src="logo/logo w.png">
         </div>
       </div>
-      <img class="backphoto" src="background/3.jpg"alt="photos/2">
+        <img class="backphoto" src="background/3.jpg"alt="photos/2">
+      </div>
     </div>
-  </div>
-
-  <!-- company text and information -->
   <div class="title">Let me help you</div>
-
   <div class="texttop">
-    Let me help you sell or rent your apartment faster by taking great photos that will make your real estate advert shine and get more views.
+    Let me help you sell or rent your apartment faster by taking professional-grade photos that will make your real estate advert shine and get more views.
 
-    Using advanced photographic and editing techniques and professional equipment, I can bring out the best of your apartment, house or business.
+    Using professional equipment, photographic and editing techniques, I can bring out the best of your apartment, house or business.
   </div>
   <br>
-
   <div class="subtitle"> Some of the techniques I offer:
   </div>
-
-
-
   <br>
-
   <div class="container">
     <div class="subtext">
       <div class="row">
@@ -75,223 +60,185 @@
           - Multiple exposures
         </div>
       </div>
-      <br>
     </div>
   </div>
-</div>
-
-
   <div class="textbottom">Real estate photography is a great way to maximize your chances of selling or renting out your apartment or house by making your advert the star of the show. Get the most visits with professional photos that make your advert stand out from the usual crowd of boring snaps taken with a mobile phone.
+  </div>
 
-  Contact me using the e-mail form below for a quote.</div>
-</div>
-
-<!-- gallery carousel up -->
-
-<div class="full-screen-portfolio" id="portfolio">
-        <div class="container-fluid">
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="photos/2.jpg" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>Biodiesel <em>squid</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="photos/2.jpg">
-                        </div>
-                    </div></a>
-                </div>
+  <!-- gallery carousel up -->
+  <div class="full-screen-portfolio" id="portfolio">
+    <div class="container-fluid">
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="photos/2.jpg" data-lightbox="image-1"><div class="thumb">
+            <div class="hover-effect">
+              <div class="hover-content">
+                <h1> <em></em></h1>
+                <p>Click to open gallery</p>
+              </div>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="photos/12.jpg"
-                     data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>raclette <em>taxidermy</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="photos/12.jpg">
-                        </div>
-                    </div></a>
-                </div>
+            <div class="image">
+              <img src="photos/2.jpg">
             </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="photos/4.jpg" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>humblebrag <em>brunch</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="photos/4.jpg">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="photos/5.jpg" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>Succulents <em>chambray</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="photos/5.jpg">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="photos/9.jpg" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>freegan <em>aesthetic</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="photos/9.jpg">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="photos/6.jpg" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>taiyaki <em>vegan</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="photos/6.jpg">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="photos/11.jpg" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>Thundercats <em>santo</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="photos/11.jpg">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="portfolio-item">
-                    <a href="photos/8.jpg" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>wayfarers <em>yuccie</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="photos/8.jpg">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-              <div class="portfolio-item">
-                  <a href="photos/10.jpg" data-lightbox="image-1"><div class="thumb">
-                        <div class="hover-effect">
-                            <div class="hover-content">
-                                <h1>disrupt <em>street</em></h1>
-                                <p>Awesome Subtittle Goes Here</p>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="photos/10.jpg">
-                        </div>
-                    </div></a>
-                </div>
-            </div>
+          </div></a>
         </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="photos/12.jpg"
+          data-lightbox="image-1"><div class="thumb">
+            <div class="hover-effect">
+              <div class="hover-content">
+                <h1><em></em></h1>
+                <p>Click to open gallery</p>
+              </div>
+            </div>
+            <div class="image">
+              <img src="photos/12.jpg">
+            </div>
+          </div></a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="photos/4.jpg" data-lightbox="image-1"><div class="thumb">
+            <div class="hover-effect">
+              <div class="hover-content">
+                <h1><em></em></h1>
+                <p>Click to open gallery</p>
+              </div>
+            </div>
+            <div class="image">
+              <img src="photos/4.jpg">
+            </div>
+          </div></a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="photos/5.jpg" data-lightbox="image-1"><div class="thumb">
+            <div class="hover-effect">
+              <div class="hover-content">
+                <h1><em></em></h1>
+                <p>Click to open gallery</p>
+              </div>
+            </div>
+            <div class="image">
+              <img src="photos/5.jpg">
+            </div>
+          </div></a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="photos/9.jpg" data-lightbox="image-1"><div class="thumb">
+            <div class="hover-effect">
+              <div class="hover-content">
+                <h1><em></em></h1>
+                <p>Click to open gallery</p>
+              </div>
+            </div>
+            <div class="image">
+              <img src="photos/9.jpg">
+            </div>
+          </div></a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="photos/6.jpg" data-lightbox="image-1"><div class="thumb">
+            <div class="hover-effect">
+              <div class="hover-content">
+                <h1><em></em></h1>
+                <p>Click to open gallery</p>
+              </div>
+            </div>
+            <div class="image">
+              <img src="photos/6.jpg">
+            </div>
+          </div></a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="photos/11.jpg" data-lightbox="image-1"><div class="thumb">
+            <div class="hover-effect">
+              <div class="hover-content">
+                <h1><em></em></h1>
+                <p>Click to open gallery</p>
+              </div>
+            </div>
+            <div class="image">
+              <img src="photos/11.jpg">
+            </div>
+          </div></a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="photos/8.jpg" data-lightbox="image-1"><div class="thumb">
+            <div class="hover-effect">
+              <div class="hover-content">
+                <h1><em></em></h1>
+                <p></p>
+              </div>
+            </div>
+            <div class="image">
+              <img src="photos/8.jpg">
+            </div>
+          </div></a>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="portfolio-item">
+          <a href="photos/10.jpg" data-lightbox="image-1"><div class="thumb">
+            <div class="hover-effect">
+              <div class="hover-content">
+                <h1><em></em></h1>
+                <p>Click to open gallery</p>
+              </div>
+            </div>
+            <div class="image">
+              <img src="photos/10.jpg">
+            </div>
+          </div></a>
+        </div>
+      </div>
     </div>
-        <footer>
-          <div class="container-fluid">
-            <div class="col-md-12">
-              <p>Copyright &copy; 2020 DM Photograpy - Designed by David Martins</p>
-            </div>
-          </div>
-          </footer
+  </div>
 
 
-          <!-- Modal button -->
-          <div class="popup-icon">
-            <button id="modBtn" class="modal-btn"><img src="img/contact-icon.png" alt=""></button>
-          </div>
+    <!-- Contact info + recaptcha -->
 
-          <!-- Modal -->
-          <div id="modal" class="modal">
-            <!-- Modal Content -->
-            <div class="modal-content">
-              <!-- Modal Header -->
-              <div class="modal-header">
-                <h3 class="header-title">Say hello to <em>Highway</em></h3>
-                <div class="close-btn"><img src="img/close_contact.png" alt=""></div>
-              </div>
-              <!-- Modal Body -->
-              <div class="modal-body">
-                <div class="col-md-6 col-md-offset-3">
-                  <form id="contact" action="" method="post">
-                    <div class="row">
-                      <div class="col-md-12">
-                        <fieldset>
-                          <input name="name" type="text" class="form-control" id="name" placeholder="Your name..." required="">
-                        </fieldset>
-                      </div>
-                      <div class="col-md-12">
-                        <fieldset>
-                          <input name="email" type="email" class="form-control" id="email" placeholder="Your email..." required="">
-                        </fieldset>
-                      </div>
-                      <div class="col-md-12">
-                        <fieldset>
-                          <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..." required=""></textarea>
-                        </fieldset>
-                      </div>
-                      <div class="col-md-12">
-                        <fieldset>
-                          <button type="submit" id="form-submit" class="btn">Send Message Now</button>
-                        </fieldset>
-                      </div>
-                    </div>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
+  <div class="foottitle">
+    Contact info:
+  </div>
+  <div class="contdetails">
+    <ul style="list-style-type:square">
+      <li><j>Email: </j>davidvicentemartins@gmail.com</li>
+      <li><j>Mobile numbers: </j>+34 600 75 66 93 / +39 331 201 54 51</li>
+      <li><j>Instagram: </j><a href="instagram.com/dmartinsphoto/">Dmartinsphoto</a></li>
+
+    </ul>
+  </div>
 
 
+<!--
+  <footer>
+    <div class="container-fluid">
+      <div class="col-md-12">
+        <p>Copyright &copy; 2020 DM Photograpy - Designed by David Martins</p>
+      </div>
+    </div>
+  </footer>
+ -->
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
+    <script src="js/vendor/bootstrap.min.js"></script>
 
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-          <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
-          <script src="js/vendor/bootstrap.min.js"></script>
-
-          <script src="js/plugins.js"></script>
-          <script src="js/main.js"></script>    </body>
-          </html>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+  </body>
+  </html>
