--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <img class="logowhite" src="logo/logo w.png">
         </div>
       </div>
-        <img class="backphoto" src="background/3.jpg"alt="photos/2">
+        <img class="backphoto" src="background/banner.jpg"alt="photos/2">
       </div>
     </div>
   <div class="title">Let me help you</div>
@@ -208,7 +208,7 @@
   </div>
 
 
-    <!-- Contact info + recaptcha -->
+    <!-- Contact info-->
 
   <div class="foottitle">
     Contact info:
@@ -223,15 +223,13 @@
   </div>
 
 
-<!--
   <footer>
-    <div class="container-fluid">
+    <div class="container">
       <div class="col-md-12">
         <p>Copyright &copy; 2020 DM Photograpy - Designed by David Martins</p>
       </div>
     </div>
   </footer>
- -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
